# python-in-ocaml

./: .#eval.ml  .gitignore  Makefile  README.md  dune-project  eval.ml  go.opam  imp  lexer.mll  main.ml  parser.mly  py.opam  run  syntax.ml
example/: .#sample5.py  class1.py  class2.py  class3.py  class4.py  class5.py  class6.py  class7.py  class8.py  class9.py  dog.py  dog2.py  dog3.py  dog4.py  dog5.py  eq1.py  greeting.py  hello1.py  hello2.py  if1.py  if2.py  int1.py  int2.py  main.py  main2.py  none1.py  pass.py  sample1.go  sample1.py  sample10.py  sample12.py  sample2.go  sample2.py  sample4.py  sample5.py  sample6.py  sample7.py  sample8.py  sample9.py  test1.py  (+9 more)
lib/: dune  system.py
test/: dune  sample.imp  sample2.imp
util/: combinator.ml  debug_print.ml  dune  list_extra.ml  option_extra.ml  result_extra.ml  util.ml
